Actualizar controlador, DAO y modelo para integración MariaDB asincrónica